--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -115,6 +115,8 @@
           <!-- <div class="container" >      -->
 
           <br>
+          <h6 style="text-align: center; font-size:xx-large;" >Número {{oBuscar.ClienteCodigo}} {{obtenNombreCliente(oBuscar.ClienteCodigo)}}</h6>
+          
           <div class="form-row">
             <div class="form-group col-md-1">              
               <label class="CamposFonelli">Pedido:</label>
@@ -133,6 +135,8 @@
                   </button> 
                 </div> 
           </div>
+
+          
 
       <div id="pdfTable" #pdfTable>
           <table  class="table table-hover table-striped">
