--- a/src/app/components/ventasarticulo/ventasarticulo.component.html
+++ b/src/app/components/ventasarticulo/ventasarticulo.component.html
@@ -450,10 +450,10 @@
                             <td class="FilasFonelli">{{art.ArticuloCodigo}}</td>
                             <td class="FilasFonelli">{{art.ArticuloDescripc}}</td>
                             <td class="FilasFonelli">{{art.ArticuloTipo}}</td>
-                            <td class="FilasFonelli" style="text-align: right;">{{art.Piezas}}</td>
-                            <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{art.PiezasPorcentaje}}</td>
-                            <td class="FilasFonelli" style="text-align: right;">{{art.Gramos}}</td>
-                            <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{art.GramosPorcentaje}}</td>
+                            <td class="FilasFonelli" style="text-align: right;">{{formatoNumero(art.Piezas)}}</td>
+                            <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{formatoNumero(art.PiezasPorcentaje)}}</td>
+                            <td class="FilasFonelli" style="text-align: right;">{{formatoNumero(art.Gramos)}}</td>
+                            <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{formatoNumero(art.GramosPorcentaje)}}</td>
                             <td class="FilasFonelli" style="text-align: right;">{{formatoMoneda(art.ImporteVenta)}}</td>
                           </tr> 
 
@@ -463,10 +463,10 @@
                           <td class="FilasFonelli"></td>
                           <td class="FilasFonelli"></td>
                           <td class="FilasFonelli" style="text-align: right;">Total Línea</td>
-                          <td class="FilasFonelli" style="text-align: right;">{{getTotalPiezasArticulo(linPro.Articulos)}}</td>
-                          <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{getTotalPiezasPorArticulo(linPro.Articulos)}}</td>
-                          <td class="FilasFonelli" style="text-align: right;">{{getTotalGramosArticulo(linPro.Articulos)}}</td>
-                          <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{getTotalGramosPorArticulo(linPro.Articulos)}}</td>
+                          <td class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalPiezasArticulo(linPro.Articulos))}}</td>
+                          <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalPiezasPorArticulo(linPro.Articulos))}}</td>
+                          <td class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalGramosArticulo(linPro.Articulos))}}</td>
+                          <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalGramosPorArticulo(linPro.Articulos))}}</td>
                           <td class="FilasFonelli" style="text-align: right;">{{formatoMoneda(getTotalImpVenArticulo(linPro.Articulos))}}</td>
                         </tr> 
 
@@ -474,10 +474,10 @@
                           <td class="FilasFonelli">{{linPro.LineaCodigo}}</td>
                           <td class="FilasFonelli">{{linPro.LineaDescripc}}</td>
                           <td class="FilasFonelli">{{linPro.ColeccionDescripc}}</td>
-                          <td class="FilasFonelli" style="text-align: right;">{{getTotalPiezasArticulo(linPro.Articulos)}}</td>
-                          <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{getTotalPiezasPorArticulo(linPro.Articulos)}}</td>
-                          <td class="FilasFonelli" style="text-align: right;">{{getTotalGramosArticulo(linPro.Articulos)}}</td>
-                          <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{getTotalGramosPorArticulo(linPro.Articulos)}}</td>
+                          <td class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalPiezasArticulo(linPro.Articulos))}}</td>
+                          <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalPiezasPorArticulo(linPro.Articulos))}}</td>
+                          <td class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalGramosArticulo(linPro.Articulos))}}</td>
+                          <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalGramosPorArticulo(linPro.Articulos))}}</td>
                           <td class="FilasFonelli" style="text-align: right;">{{formatoMoneda(getTotalImpVenArticulo(linPro.Articulos))}}</td>
                         </tr>
 
@@ -487,10 +487,10 @@
                       <td></td>
                       <td></td>      
                       <td class="FilasFonelli" style="text-align: right;">Total SubCategoria</td>
-                      <td class="FilasFonBold" style="text-align: right;">{{getTotalPiezasxSubCat(subCat.LineasProducto)}}</td>
-                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalPiezasPorxSubCat(subCat.LineasProducto)}}</td>
-                      <td class="FilasFonBold" style="text-align: right;">{{getTotalGramosxSubCat(subCat.LineasProducto)}}</td>
-                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalGramosPorxSubCat(subCat.LineasProducto)}}</td>
+                      <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasxSubCat(subCat.LineasProducto))}}</td>
+                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasPorxSubCat(subCat.LineasProducto))}}</td>
+                      <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalGramosxSubCat(subCat.LineasProducto))}}</td>
+                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalGramosPorxSubCat(subCat.LineasProducto))}}</td>
                       <td class="FilasFonBold" style="text-align: right;">{{formatoMoneda(getTotalImpVenxSubCat(subCat.LineasProducto))}}</td>
                     </tr>
 
@@ -500,10 +500,10 @@
                       <td></td>
                       <td></td>      
                       <td class="FilasFonelli" style="text-align: right;">Total Categoria</td>
-                      <td class="FilasFonBold" style="text-align: right;">{{getTotalPiezasxCategoria(venArt.Subcategorias)}}</td>
-                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalPiezasPorxCategoria(venArt.Subcategorias)}}</td>
-                      <td class="FilasFonBold" style="text-align: right;">{{getTotalGramosxCategoria(venArt.Subcategorias)}}</td>
-                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalGramosPorxCategoria(venArt.Subcategorias)}}</td>
+                      <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasxCategoria(venArt.Subcategorias))}}</td>
+                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasPorxCategoria(venArt.Subcategorias))}}</td>
+                      <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(formatoNumero(getTotalGramosxCategoria(venArt.Subcategorias)))}}</td>
+                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(formatoNumero(getTotalGramosPorxCategoria(venArt.Subcategorias)))}}</td>
                       <td class="FilasFonBold" style="text-align: right;">{{formatoMoneda(getTotalImpVenxCategoria(venArt.Subcategorias))}}</td>
                     </tr>  
                      
@@ -515,10 +515,10 @@
                   <td></td>
                   <td></td>      
                   <td class="FilasFonelli" style="text-align: right;">Total Cliente</td>
-                  <td class="FilasFonBold" style="text-align: right;">{{getTotalPiezasxCliente(oVentasArticuloRes.Contenido)}}</td>
-                  <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalPiezasPorxCliente(oVentasArticuloRes.Contenido)}}</td>
-                  <td class="FilasFonBold" style="text-align: right;">{{getTotalGramosxCliente(oVentasArticuloRes.Contenido)}}</td>
-                  <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalGramosPorxCliente(oVentasArticuloRes.Contenido)}}</td>
+                  <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasxCliente(oVentasArticuloRes.Contenido))}}</td>
+                  <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasPorxCliente(oVentasArticuloRes.Contenido))}}</td>
+                  <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(formatoNumero(getTotalGramosxCliente(oVentasArticuloRes.Contenido)))}}</td>
+                  <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(formatoNumero(getTotalGramosPorxCliente(oVentasArticuloRes.Contenido)))}}</td>
                   <td class="FilasFonBold" style="text-align: right;">{{formatoMoneda(getTotalImpVenxCliente(oVentasArticuloRes.Contenido))}}</td>
                 </tr> 
                          
@@ -601,10 +601,10 @@
                         <td class="FilasFonelli">{{cat.CategoriaCodigo}}</td>
                         <td class="FilasFonelli">{{art.ArticuloDescripc}}</td>
                         <td class="FilasFonelli">{{art.ArticuloTipo}}</td>
-                        <td class="FilasFonelli" style="text-align: right;">{{getTotalPiezasArticulo(linPro.Articulos)}}</td>
-                        <td *ngIf="!bCliente"class="FilasFonelli" style="text-align: right;">{{getTotalPiezasPorArticulo(linPro.Articulos)}}</td>
-                        <td class="FilasFonelli" style="text-align: right;">{{getTotalGramosArticulo(linPro.Articulos)}}</td>
-                        <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{getTotalGramosPorArticulo(linPro.Articulos)}}</td>
+                        <td class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalPiezasArticulo(linPro.Articulos))}}</td>
+                        <td *ngIf="!bCliente"class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalPiezasPorArticulo(linPro.Articulos))}}</td>
+                        <td class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalGramosArticulo(linPro.Articulos))}}</td>
+                        <td *ngIf="!bCliente" class="FilasFonelli" style="text-align: right;">{{formatoNumero(getTotalGramosPorArticulo(linPro.Articulos))}}</td>
                         <td class="FilasFonelli" style="text-align: right;">{{formatoMoneda(getTotalImpVenArticulo(linPro.Articulos))}}</td>
                       </tr> 
 
@@ -618,10 +618,10 @@
                       <td></td>      
                       <td></td>      
                       <td class="FilasFonelli" style="text-align: right;">Total SubCategoria</td>
-                      <td class="FilasFonBold" style="text-align: right;">{{getTotalPiezasxSubCat(subCat.LineasProducto)}}</td>
-                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalPiezasPorxSubCat(subCat.LineasProducto)}}</td>
-                      <td class="FilasFonBold" style="text-align: right;">{{getTotalGramosxSubCat(subCat.LineasProducto)}}</td>
-                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalGramosPorxSubCat(subCat.LineasProducto)}}</td>
+                      <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasxSubCat(subCat.LineasProducto))}}</td>
+                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasPorxSubCat(subCat.LineasProducto))}}</td>
+                      <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalGramosxSubCat(subCat.LineasProducto))}}</td>
+                      <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalGramosPorxSubCat(subCat.LineasProducto))}}</td>
                       <td class="FilasFonBold" style="text-align: right;">{{formatoMoneda(getTotalImpVenxSubCat(subCat.LineasProducto))}}</td>
                     </tr>  
 
@@ -635,10 +635,10 @@
                     <td></td>
                     <td></td>      
                     <td class="FilasFonelli" style="text-align: right;">Total Categoria</td>
-                    <td class="FilasFonBold" style="text-align: right;">{{getTotalPiezasxCategoria(cat.Subcategorias)}}</td>
-                    <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalPiezasPorxCategoria(cat.Subcategorias)}}</td>
-                    <td class="FilasFonBold" style="text-align: right;">{{getTotalGramosxCategoria(cat.Subcategorias)}}</td>
-                    <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalGramosPorxCategoria(cat.Subcategorias)}}</td>
+                    <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasxCategoria(cat.Subcategorias))}}</td>
+                    <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasPorxCategoria(cat.Subcategorias))}}</td>
+                    <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalGramosxCategoria(cat.Subcategorias))}}</td>
+                    <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalGramosPorxCategoria(cat.Subcategorias))}}</td>
                     <td class="FilasFonBold" style="text-align: right;">{{formatoMoneda(getTotalImpVenxCategoria(cat.Subcategorias))}}</td>
                   </tr>                    
 
@@ -654,10 +654,10 @@
                 <td></td>
                 <td></td>      
                 <td class="FilasFonelli" style="text-align: right;">Total Cliente</td>
-                <td class="FilasFonBold" style="text-align: right;">{{getTotalPiezasxCliente(oVentasArticuloPzasImpRes.Contenido)}}</td>
-                <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalPiezasPorxCliente(oVentasArticuloPzasImpRes.Contenido)}}</td>
-                <td class="FilasFonBold" style="text-align: right;">{{getTotalGramosxCliente(oVentasArticuloPzasImpRes.Contenido)}}</td>
-                <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{getTotalGramosPorxCliente(oVentasArticuloPzasImpRes.Contenido)}}</td>
+                <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasxCliente(oVentasArticuloPzasImpRes.Contenido))}}</td>
+                <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalPiezasPorxCliente(oVentasArticuloPzasImpRes.Contenido))}}</td>
+                <td class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalGramosxCliente(oVentasArticuloPzasImpRes.Contenido))}}</td>
+                <td *ngIf="!bCliente" class="FilasFonBold" style="text-align: right;">{{formatoNumero(getTotalGramosPorxCliente(oVentasArticuloPzasImpRes.Contenido))}}</td>
                 <td class="FilasFonBold" style="text-align: right;">{{formatoMoneda(getTotalImpVenxCliente(oVentasArticuloPzasImpRes.Contenido))}}</td>
               </tr> 
             </ng-container>               
