--- a/src/app/components/datosclientes/datosclientes.component.html
+++ b/src/app/components/datosclientes/datosclientes.component.html
@@ -64,7 +64,7 @@
           <div class="col-lg-12">
             <div class="card">
               <div class="card-body">
-                <h2 style="text-align: center; font-size:xx-large;" >Número {{sCodigo}} {{sNombre}}</h2>
+                <h2 style="text-align: center; font-size:xx-large;" >Número {{oBuscar.ClienteCodigo}} {{obtenNombreCliente(oBuscar.ClienteCodigo)}}</h2>
 
                 <ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
                   <li [ngbNavItem]="1">
@@ -211,7 +211,7 @@
                               <label class="CamposGeneral">Oficina de atención:</label>
                             </div>
                             <div class="col-sm-3">                     
-                              <label>{{ oCondiciones.OficinaAtencionNombre }}}</label>
+                              <label>{{ oCondiciones.OficinaAtencionNombre }}</label>
                             </div>     
                           </div>
                           <div class="form-row">
